person detail view implemented.